Setup basic html docs with sphinx.
The docs are almost entirely generated from the `README.md` file.
The documentation uses the `furo` theme with customizations,
adjusting the logo, edit-source button and adding a version selector item to the buttom
of the sidebar reminding of the one by readthedocs.

* .pre-commit-config.yaml (darglint2): Exclude `docs` directory.

* Makefile : Add phonies for tests, lint, docs and clean.

* pyproject.toml : Add `docs` dependency group with sphinx and the used extensions.

* poetry.lock : Autogenerated.

* docs/Makefile : Merge make file autogenerated by `sphinx-quickstart` into this file.

* docs/make.bat : Autogenerated by `sphinx-quickstart`.

* docs/source/.gitignore : Ignore `doctrees` directory generated by sphinx.

* docs/source/conf.py : Configure sphinx.

* docs/source/index.rst : Starting point of doc generation. Generated `index.html`.

* docs/source/changelog.rst : Include `CHANGELOG.md` in docs.

* docs/source/readme.rst : Include `README.md` in docs.

* docs/source/license.rst : Include `LICENSE.txt` in docs.

* docs/source/_static/css/ext-links.css : Add unused css file adding a small marker icon to external links.
	This could be used in the future. I committed it so that this work isn't lost.

* docs/source/_templates/versioning.html : Implement version picker.

* docs/source/_static/css/version-selector.css : Style version picker.

* docs/source/_templates/components/edit-this-page.html : Modify behaviour of `edit-source` button.

* docs/source/_templates/sidebar/brand.html : Style darglint2 logo adding a version number.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -71,7 +71,7 @@ repos:
     rev: 7d5a99253ae80435824463c9f36256e870041258 # frozen: v1.8.2
     hooks:
       - id: darglint2
-        exclude: ^(tests|integration_tests)
+        exclude: ^(docs|tests|integration_tests)
 
 # configuration for the pre-commit.ci bot
 # only relevant when actually using the bot
